--- a/packages/unpak/Cargo.toml
+++ b/packages/unpak/Cargo.toml
@@ -2,7 +2,10 @@
 name = "unpak"
 version = "0.1.0"
 edition = "2021"
+authors = ["NealRame <https://github.com/NealRame>"]
+description = "A simple tool to extract files from a .pak archive"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.1.8", features = ["derive", "env"] }
