--- a/packages/pal2bmp/Cargo.toml
+++ b/packages/pal2bmp/Cargo.toml
@@ -2,6 +2,8 @@
 name = "pal2bmp"
 version = "0.1.0"
 edition = "2021"
+authors = ["NealRame <https://github.com/NealRame>"]
+description = "Converts PAL files to BMP files"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
