--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 
 members = [
     "packages/dune2",
+    "packages/icn2bmp",
     "packages/pal2bmp",
     "packages/shp2bmp",
     "packages/unpak",
