refactor(WIP): create rctoolkit cli package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [workspace]
 
 members = [
+    # dune2 data lib
     "packages/dune2",
+    # dune2 data command line tools
+    "packages/rctoolkit",
     "packages/icn2bmp",
     "packages/pal2bmp",
     "packages/shp2bmp",
