--- a/packages/dune2/Cargo.toml
+++ b/packages/dune2/Cargo.toml
@@ -3,8 +3,12 @@ name = "dune2"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 bitvec = "1.0.1"
 paste = "1.0.12"
+serde = { version = "1.0.162", features = ["derive"] }
