--- a/packages/rctoolkit/Cargo.toml
+++ b/packages/rctoolkit/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.2.7", features = ["derive", "env"] }
-deflate = "1.0.0"
 dune2 = { path = "../dune2" }
+flate2 = "1.0.26"
 rmp-serde = "1.1.1"
 serde = "1.0.162"
 toml = "0.7.3"
