--- a/packages/rctoolkit/Cargo.toml
+++ b/packages/rctoolkit/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
-name = "shp2bmp"
+name = "dune2-rc-toolkit"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.1.9", features = ["derive", "env"] }
+clap = { version = "4.2.7", features = ["derive", "env"] }
 dune2 = { path = "../dune2" }
+flate2 = "1.0.26"
+rmp-serde = "1.1.1"
+serde = "1.0.162"
+toml = "0.7.3"
