--- a/dune2.rc.toml
+++ b/dune2.rc.toml
@@ -6,19 +6,19 @@ path = "data/DUNE/BENE.PAL"
 
 [[tilesets]]
 path = "data/DUNE/ICON.ICN"
-kind = "icn"
+kind = "ICN"
 
 [[tilesets]]
 path = "data/DUNE/UNITS.SHP"
-kind = "shp"
+kind = "SHP"
 
 [[tilesets]]
 path = "data/DUNE/UNITS1.SHP"
-kind = "shp"
+kind = "SHP"
 
 [[tilesets]]
 path = "data/DUNE/UNITS2.SHP"
-kind = "shp"
+kind = "SHP"
 
 ###############################################################################
 # Tilemaps
@@ -2079,50 +2079,131 @@ remapable = false
 ##############################################################################
 # Sprites
 
-# [[sprites.Barracks]]
+# [sprites.Barracks]
 # frames = [38, 39, 40, 41]
 
-# [[sprites.ConstructionYard]]
+# [sprites.ConstructionYard]
 # frames = [34, 35, 36, 37]
 
-# [[sprites.HeavyFactory]]
+# [sprites.HeavyFactory]
 # frames = [10, 11, 12, 13, 14, 15, 16, 17]
 
-# [[sprites.HighTechFactory]]
+# [sprites.HighTechFactory]
 # frames = [18, 19, 20, 21, 22, 23, 24, 25]
 
-# [[sprites.LightFactory]]
+# [sprites.LightFactory]
 # frames = [4, 5, 6, 7, 8, 9]
 
-# [[sprites.Outpost]]
+# [sprites.Outpost]
 # frames = [100, 101, 102, 103, 104, 105]
 
-# [[sprites.Palace]]
+# [sprites.Palace]
 # frames = [0, 1, 2, 3]
 
-# [[sprites.Refinery]]
+# [sprites.Refinery]
 # frames = [56, 57, 58, 59, 60, 61, 62, 63, 64, 65]
 
-# [[sprites.RepairFacility]]
+# [sprites.RepairFacility]
 # frames = [66, 67, 68, 69, 70, 71, 72, 73, 74, 75]
 
-# [[sprites.ResearchCenter]]
+# [sprites.ResearchCenter]
 # frames = [26, 27, 28, 29]
 
-# [[sprites.RocketTurret]]
+# [sprites.RocketTurret]
 # frames = [86, 87, 88, 89, 90, 91, 92, 93, 94, 95]
 
-# [[sprites.SpiceSilos]]
+# [sprites.SpiceSilos]
 # frames = [96, 97, 98, 99]
 
-# [[sprites.Starport]]
+# [sprites.Starport]
 # frames = [46, 47, 48, 49, 50, 51, 52, 53, 54, 55]
 
-# [[sprites.Turret]]
+# [sprites.Turret]
 # frames = [76, 77, 78, 79, 80, 81, 82, 83, 84, 85]
 
-# [[sprites.WindTrap]]
+# [sprites.WindTrap]
 # frames = [42, 43, 44, 45]
 
-# [[sprites.WOR]]
+# [sprites.WOR]
 # frames = [30, 31, 32, 33]
+
+[sprites.Harvester]
+frames = [
+    { index = 196 },
+    { index = 197 },
+    { index = 198 },
+    { index = 199 },
+    { index = 197, transform = "FlipXY" },
+    { index = 198, transform = "FlipX"  },
+    { index = 199, transform = "FlipXY" },
+    { index = 200 },
+]
+
+# [sprites.HarvesterSand]
+# frames = [286, 287, 288, 289, 290, 291, 292, 293, 294, 295, 296, 297, 298, 299, 300]
+
+# [sprites.MCV]
+# frames = [201, 202, 203, 204, 205]
+
+# [sprites.Infantry]
+# frames = [135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146]
+
+# [sprites.Troopers]
+# frames = [147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158]
+
+# [sprites.Trike]
+# frames = [130, 131, 132, 133, 134]
+
+# [sprites.Quad]
+# frames = [125, 126, 127, 128, 129]
+
+# [sprites.Tank]
+# frames = [166, 167, 168, 169, 170]
+
+# [sprites.TankTurret]
+# frames = [171, 172, 173, 174, 175]
+
+# [sprites.MissileTankTurret]
+# frames = [254, 255, 256, 257, 258]
+
+# [sprites.SonicTankTurret]
+# frames = [249, 250, 251, 252, 253]
+
+# [sprites.SiegeTank]
+# frames = [176, 177, 178, 179, 180]
+
+# [sprites.SiegeTankTurret]
+# frames = [181, 182, 183, 184, 185]
+
+# [sprites.Devastator]
+# frames = [186, 187, 188, 189, 190]
+
+# [sprites.DevastatorTurret]
+# frames = [191, 192, 193, 194, 195]
+
+# [sprites.Carryall]
+# frames = [211, 212, 213, 214, 215, 216]
+
+# [sprites.Ornithopter]
+# frames = [217, 218, 219, 220, 221, 222, 223, 224, 225]
+
+# [sprites.SandWorm]
+# frames = [334, 335, 336, 337, 338]
+
+# [sprites.Frigate]
+# frames = [339, 340, 341]
+
+# [sprites.Fremen]
+# frames = []
+
+# [sprites.Raider]
+# frames = []
+
+# [sprites.Saboteur]
+# frames = []
+
+# [sprites.DeathHand]
+# frames = []
+
+# [sprites.Sardaukar]
+# frames = []
