refactor: declare icn map  and shp features

--- a/packages/rctoolkit/Cargo.toml
+++ b/packages/rctoolkit/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.2.7", features = ["derive", "env"] }
-dune2 = { path = "../dune2" }
+dune2 = { path = "../dune2", features = ["shp", "icn"] }
 flate2 = "1.0.26"
 image = "0.24.6"
 rmp-serde = "1.1.1"
