--- a/packages/dune2/Cargo.toml
+++ b/packages/dune2/Cargo.toml
@@ -15,5 +15,7 @@ map = []
 
 [dependencies]
 bitvec = "1.0.1"
+flate2 = { version = "1.0.26", default-features = false, features = ["rust_backend"] }
 paste = "1.0.12"
+rmp-serde = "1.1.1"
 serde = { version = "1.0.162", features = ["derive"] }
