--- a/packages/dune2/Cargo.toml
+++ b/packages/dune2/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [features]
-shp = []
+shp = ["dep:bitvec"]
 icn = []
 map = []
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bitvec = "1.0.1"
+bitvec = { version = "1.0.1", optional = true }
 flate2 = { version = "1.0.26", default-features = false, features = ["rust_backend"] }
 paste = "1.0.12"
 rmp-serde = "1.1.1"
