--- a/packages/dune2/Cargo.toml
+++ b/packages/dune2/Cargo.toml
@@ -10,12 +10,21 @@ crate-type = ["cdylib", "rlib"]
 shp = ["dep:bitvec"]
 icn = []
 map = []
+wasm = ["dep:js-sys", "dep:wasm-bindgen", "dep:web-sys", "dep:wee_alloc"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 bitvec = { version = "1.0.1", optional = true }
 flate2 = { version = "1.0.26", default-features = false, features = ["rust_backend"] }
+js-sys = { version = "0.3.64", optional = true }
 paste = "1.0.12"
 rmp-serde = "1.1.1"
 serde = { version = "1.0.162", features = ["derive"] }
+wasm-bindgen = { version = "0.2.87", optional = true }
+web-sys = { version = "0.3.64", features = ["console", "ImageData"], optional = true }
+wee_alloc = { version = "0.4.5", optional = true }
+
+[profile.release]
+# Tell `rustc` to optimize for small code size.
+opt-level = "s"
