--- a/packages/dune2/Cargo.toml
+++ b/packages/dune2/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["cdylib", "rlib"]
 shp = ["dep:bitvec"]
 icn = []
 map = []
-wasm = ["dep:js-sys", "dep:wasm-bindgen", "dep:web-sys", "dep:wee_alloc"]
+wasm = ["dep:js-sys", "dep:wasm-bindgen", "dep:web-sys"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -18,10 +18,9 @@ wasm = ["dep:js-sys", "dep:wasm-bindgen", "dep:web-sys", "dep:wee_alloc"]
 anyhow = "1.0.86"
 bitvec = { version = "1.0.1", optional = true }
 flate2 = { version = "1.0.26", default-features = false, features = ["rust_backend"] }
-js-sys = { version = "0.3.64", optional = true }
+js-sys = { version = "0.3.70", optional = true }
 paste = "1.0.12"
 rmp-serde = "1.1.1"
-serde = { version = "1.0.162", features = ["derive"] }
-wasm-bindgen = { version = "0.2.87", optional = true }
-web-sys = { version = "0.3.64", features = ["console", "ImageData"], optional = true }
-wee_alloc = { version = "0.4.5", optional = true }
+serde = { version = "1.0.209", features = ["derive"] }
+wasm-bindgen = { version = "0.2.93", optional = true }
+web-sys = { version = "0.3.70", features = ["console", "ImageData"], optional = true }
